--- a/Todo App/src/components/form.module.css
+++ b/Todo App/src/components/form.module.css
@@ -33,3 +33,11 @@
 .inputContainer {
     display: flex;
 }
+
+
+@media screen and (max-width: 480px){
+    .todoform{
+        width: 300px;
+    }    
+
+}
