--- a/Todo App/src/components/header.module.css
+++ b/Todo App/src/components/header.module.css
@@ -7,3 +7,11 @@
     font-size: 2em;
     box-shadow: 0 4px 6px rgba(0,0,0.2);
 }
+
+@media screen and (max-width: 480px){
+    .header{
+        font-size: 25px;
+        height: 30px;
+    }    
+
+}
