--- a/Todo App/src/components/todoitem.module.css
+++ b/Todo App/src/components/todoitem.module.css
@@ -28,3 +28,17 @@
 .completed{
     text-decoration: line-through;
 }
+
+@media screen and (max-width: 480px){
+    .item{
+        width: 350px;
+        font-size: 16px;
+    }    
+    .itemname{
+        padding: 10px;
+    }
+    .deleteButton{
+        padding: 6px 10px;
+    }
+
+}
